# DirectFB-Lazy

./: ChangeLog  README  configure.in
src/: Makefile.am  lazy_gfxdriver.c  lazy_gfxdriver.h  lazy_osd.c  lazy_osd.h  lazy_osd_pool.c  lazy_osd_pool.h  lazy_passthrough.c  lazy_passthrough.h  lazy_passthrough_internal.h  lazy_screen.c  lazy_screen.h
