dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/lazy_gfxdriver.h)

dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(DirectFB-Lazy, 1.0.0)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

AC_CONFIG_MACRO_DIR([m4])

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_LIBTOOL
PKG_PROG_PKG_CONFIG

dnl Checks for libraries.
PKG_CHECK_MODULES(DIRECTFB, [directfb >= 1.4 directfb-internal])
DIRECTFB_MODULEDIR=`$PKG_CONFIG directfb-internal --variable=moduledirname`
AC_SUBST(DIRECTFB_MODULEDIR)

dnl Checks for header files.
AC_HEADER_STDC


AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(
Makefile
src/Makefile
)
